--- a/template/web/diningold.html
+++ b/template/web/diningold.html
@@ -84,7 +84,7 @@
                         <td>07:00 AM - 10:00 PM</td>
                     </tr>
                     <tr>
-                        <td  colspan="2"><a href ="#" class="btn" id="btn_spacing_top" style="margin-top:1rem;">VIEW MENU</a></td>
+                        <td  colspan="2"><a href ="#" class="btn restro-view-menu" id="btn_spacing_top" style="margin-top:1rem;">VIEW MENU</a></td>
                        
                     </tr>
                   </tbody>
