--- a/template/web/index.html
+++ b/template/web/index.html
@@ -187,8 +187,57 @@
             <p class="about-sub-title">Lorem ipsum dolor sit.</p>
             <h2 class="events-title">Nearby Location</h2>
             <div class="line-v2"></div>
-            <div id="events-v2" class="owl-carousel owl-theme owl_content_display">
+            <!-- <div id="events-v2" class="owl-carousel owl-theme owl_content_display">
                 <jcms:module:inner-nearby-detail/>
+            </div> -->
+            <div class="row nearby-section">
+                <div class="col-lg-5">
+                    <div class="perma-link" data-link="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d5953.227531429283!2d83.27678266356897!3d27.475165555564317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e2!4m5!1s0x3996948490956ff3%3A0x9d52302c98bd1088!2sLumbini%20Zambala%20Hotel%2C%20Hotel%20Zambala%2C%20Vishnupura%20Road%2C%20Lumbini%20Sanskritik%2032900!3m2!1d27.4748158!2d83.2845352!4m5!1s0x3996949937483391%3A0xa57945be8227e87!2sEternal%20Peace%20Flame!3m2!1d27.4747317!2d83.27571909999999!5e0!3m2!1sen!2snp!4v1731412266618!5m2!1sen!2snp">
+                        <div class="nearby-texts">
+                            <h3>Lorem ipsum dolor sit.</h3>
+                            <p><i class="fa fa-map-marker"></i>Lorem, ipsum dolor.</p>
+                            <a href="" class="nearby-redirection">Get direction <i class="fa fa-arrow-right"></i></a>
+                        </div>
+                        <div class="nearby-img">
+                            <img src="../../images/nearby/Bua9A-village.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="perma-link">
+                        <div class="nearby-texts">
+                            <h3>Lorem ipsum dolor sit.</h3>
+                            <p><i class="fa fa-map-marker"></i>Lorem, ipsum dolor.</p>
+                            <a href="" class="nearby-redirection">Get direction <i class="fa fa-arrow-right"></i></a>
+                        </div>
+                        <div class="nearby-img">
+                            <img src="../../images/nearby/Bua9A-village.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="perma-link">
+                        <div class="nearby-texts">
+                            <h3>Lorem ipsum dolor sit.</h3>
+                            <p><i class="fa fa-map-marker"></i>Lorem, ipsum dolor.</p>
+                            <a href="" class="nearby-redirection">Get direction <i class="fa fa-arrow-right"></i></a>
+                        </div>
+                        <div class="nearby-img">
+                            <img src="../../images/nearby/Bua9A-village.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="perma-link">
+                        <div class="nearby-texts">
+                            <h3>Lorem ipsum dolor sit.</h3>
+                            <p><i class="fa fa-map-marker"></i>Lorem, ipsum dolor.</p>
+                            <a href="" class="nearby-redirection">Get direction <i class="fa fa-arrow-right"></i></a>
+                        </div>
+                        <div class="nearby-img">
+                            <img src="../../images/nearby/Bua9A-village.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-7">
+                    <div class="nearby-map">
+                        <iframe src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28316.93134672701!2d83.27431271626887!3d27.481198767559267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3996948490956ff3%3A0x9d52302c98bd1088!2sLumbini%20Zambala%20Hotel!5e0!3m2!1sen!2snp!4v1731411462326!5m2!1sen!2snp' allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="nearbyEmbeddedMap"></iframe>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
