--- a/template/web/css/styles.css
+++ b/template/web/css/styles.css
@@ -22727,3 +22727,15 @@ object-position: center;
   font-size: 25px;
   color: white;
 }
+.brand-logo-second{
+  display: none;
+}
+.brand-logo-first{
+  display: block;
+}
+.header-top-sky .menu-header .navbar-brand.brand-logo-first{
+  display: none;
+}
+.header-top-sky .menu-header .navbar-brand.brand-logo-second{
+  display: block;
+}
